Ensure cards don't overlap search popover.

--- a/assets/base.css
+++ b/assets/base.css
@@ -3232,6 +3232,10 @@ details-disclosure > details {
     z-index: 2; /* Make sure the hovered card is the topmost card. */
   }
 
+  .animate--hover-3d-lift .product-grid {
+    isolation: isolate; /* Ensure z-index changes here don't negatively effect other UI stacking. */
+  }
+
   .animate--hover-3d-lift .card-wrapper .card--shape.card--standard:not(.card--text) .card__inner {
     box-shadow: none;
     transition: transform var(--duration-long) ease, filter var(--duration-long) ease;
